libqt6c/src/libqpainter.hpp

typedef struct QBrush QBrush;
typedef struct QColor QColor;
typedef struct QFont QFont;
typedef struct QFontInfo QFontInfo;
typedef struct QFontMetrics QFontMetrics;
typedef struct QLine QLine;
typedef struct QLineF QLineF;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPen QPen;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QRegion QRegion;
typedef struct QTransform QTransform;
QPainter* QPainter_new();
QPainter* QPainter_new2(QPaintDevice* param1);
QPaintDevice* QPainter_Device(const QPainter* self);
bool QPainter_Begin(QPainter* self, QPaintDevice* param1);
bool QPainter_End(QPainter* self);
bool QPainter_IsActive(const QPainter* self);
void QPainter_SetCompositionMode(QPainter* self, int mode);
int QPainter_CompositionMode(const QPainter* self);
QFont* QPainter_Font(const QPainter* self);
void QPainter_SetFont(QPainter* self, const QFont* f);
QFontMetrics* QPainter_FontMetrics(const QPainter* self);
QFontInfo* QPainter_FontInfo(const QPainter* self);
void QPainter_SetPen(QPainter* self, const QColor* color);
void QPainter_SetPen2(QPainter* self, const QPen* pen);
void QPainter_SetPen3(QPainter* self, int style);
QPen* QPainter_Pen(const QPainter* self);
void QPainter_SetBrush(QPainter* self, const QBrush* brush);
void QPainter_SetBrush2(QPainter* self, int style);
QBrush* QPainter_Brush(const QPainter* self);
void QPainter_SetBackgroundMode(QPainter* self, int mode);
int QPainter_BackgroundMode(const QPainter* self);
QPoint* QPainter_BrushOrigin(const QPainter* self);
void QPainter_SetBrushOrigin(QPainter* self, int x, int y);
void QPainter_SetBrushOrigin2(QPainter* self, const QPoint* brushOrigin);
void QPainter_SetBrushOrigin3(QPainter* self, const QPointF* brushOrigin);
void QPainter_SetBackground(QPainter* self, const QBrush* bg);
QBrush* QPainter_Background(const QPainter* self);
double QPainter_Opacity(const QPainter* self);
void QPainter_SetOpacity(QPainter* self, double opacity);
QRegion* QPainter_ClipRegion(const QPainter* self);
QPainterPath* QPainter_ClipPath(const QPainter* self);
void QPainter_SetClipRect(QPainter* self, const QRectF* param1);
void QPainter_SetClipRect2(QPainter* self, const QRect* param1);
void QPainter_SetClipRect3(QPainter* self, int x, int y, int w, int h);
void QPainter_SetClipRegion(QPainter* self, const QRegion* param1);
void QPainter_SetClipPath(QPainter* self, const QPainterPath* path);
void QPainter_SetClipping(QPainter* self, bool enable);
bool QPainter_HasClipping(const QPainter* self);
QRectF* QPainter_ClipBoundingRect(const QPainter* self);
void QPainter_Save(QPainter* self);
void QPainter_Restore(QPainter* self);
void QPainter_SetTransform(QPainter* self, const QTransform* transform);
QTransform* QPainter_Transform(const QPainter* self);
QTransform* QPainter_DeviceTransform(const QPainter* self);
void QPainter_ResetTransform(QPainter* self);
void QPainter_SetWorldTransform(QPainter* self, const QTransform* matrix);
QTransform* QPainter_WorldTransform(const QPainter* self);
QTransform* QPainter_CombinedTransform(const QPainter* self);
void QPainter_SetWorldMatrixEnabled(QPainter* self, bool enabled);
bool QPainter_WorldMatrixEnabled(const QPainter* self);
void QPainter_Scale(QPainter* self, double sx, double sy);
void QPainter_Shear(QPainter* self, double sh, double sv);
void QPainter_Rotate(QPainter* self, double a);
void QPainter_Translate(QPainter* self, const QPointF* offset);
void QPainter_Translate2(QPainter* self, const QPoint* offset);
void QPainter_Translate3(QPainter* self, double dx, double dy);
QRect* QPainter_Window(const QPainter* self);
void QPainter_SetWindow(QPainter* self, const QRect* window);
void QPainter_SetWindow2(QPainter* self, int x, int y, int w, int h);
QRect* QPainter_Viewport(const QPainter* self);
void QPainter_SetViewport(QPainter* self, const QRect* viewport);
void QPainter_SetViewport2(QPainter* self, int x, int y, int w, int h);
void QPainter_SetViewTransformEnabled(QPainter* self, bool enable);
bool QPainter_ViewTransformEnabled(const QPainter* self);
void QPainter_StrokePath(QPainter* self, const QPainterPath* path, const QPen* pen);
void QPainter_FillPath(QPainter* self, const QPainterPath* path, const QBrush* brush);
void QPainter_DrawPath(QPainter* self, const QPainterPath* path);
void QPainter_DrawPoint(QPainter* self, const QPointF* pt);
void QPainter_DrawPoint2(QPainter* self, const QPoint* p);
void QPainter_DrawPoint3(QPainter* self, int x, int y);
void QPainter_DrawPoints(QPainter* self, const QPointF* points, int pointCount);
void QPainter_DrawPoints3(QPainter* self, const QPoint* points, int pointCount);
void QPainter_DrawLine(QPainter* self, const QLineF* line);
void QPainter_DrawLine2(QPainter* self, const QLine* line);
void QPainter_DrawLine3(QPainter* self, int x1, int y1, int x2, int y2);
void QPainter_DrawLine4(QPainter* self, const QPoint* p1, const QPoint* p2);
void QPainter_DrawLine5(QPainter* self, const QPointF* p1, const QPointF* p2);
void QPainter_DrawLines(QPainter* self, const QLineF* lines, int lineCount);
void QPainter_DrawLines2(QPainter* self, const libqt_list /* of QLineF* */ lines);
void QPainter_DrawLines3(QPainter* self, const QPointF* pointPairs, int lineCount);
void QPainter_DrawLines4(QPainter* self, const libqt_list /* of QPointF* */ pointPairs);
void QPainter_DrawLines5(QPainter* self, const QLine* lines, int lineCount);
void QPainter_DrawLines6(QPainter* self, const libqt_list /* of QLine* */ lines);
void QPainter_DrawLines7(QPainter* self, const QPoint* pointPairs, int lineCount);
void QPainter_DrawLines8(QPainter* self, const libqt_list /* of QPoint* */ pointPairs);
void QPainter_DrawRect(QPainter* self, const QRectF* rect);
void QPainter_DrawRect2(QPainter* self, int x1, int y1, int w, int h);
void QPainter_DrawRect3(QPainter* self, const QRect* rect);
void QPainter_DrawRects(QPainter* self, const QRectF* rects, int rectCount);
void QPainter_DrawRects2(QPainter* self, const libqt_list /* of QRectF* */ rectangles);
void QPainter_DrawRects3(QPainter* self, const QRect* rects, int rectCount);
void QPainter_DrawRects4(QPainter* self, const libqt_list /* of QRect* */ rectangles);
void QPainter_DrawEllipse(QPainter* self, const QRectF* r);
void QPainter_DrawEllipse2(QPainter* self, const QRect* r);
void QPainter_DrawEllipse3(QPainter* self, int x, int y, int w, int h);
void QPainter_DrawEllipse4(QPainter* self, const QPointF* center, double rx, double ry);
void QPainter_DrawEllipse5(QPainter* self, const QPoint* center, int rx, int ry);
void QPainter_DrawPolyline(QPainter* self, const QPointF* points, int pointCount);
void QPainter_DrawPolyline3(QPainter* self, const QPoint* points, int pointCount);
void QPainter_DrawPolygon(QPainter* self, const QPointF* points, int pointCount);
void QPainter_DrawPolygon3(QPainter* self, const QPoint* points, int pointCount);
void QPainter_DrawConvexPolygon(QPainter* self, const QPointF* points, int pointCount);
void QPainter_DrawConvexPolygon3(QPainter* self, const QPoint* points, int pointCount);
void QPainter_DrawArc(QPainter* self, const QRectF* rect, int a, int alen);
void QPainter_DrawArc2(QPainter* self, const QRect* param1, int a, int alen);
void QPainter_Delete(QPainter* self);