QtBeef/src/Qt/qpainter.bf

extension CQt
{
	[LinkName("QPainter_new")]
	public static extern QPainter_Ptr QPainter_new();
	[LinkName("QPainter_new2")]
	public static extern QPainter_Ptr QPainter_new2(void** param1);
	[LinkName("QPainter_Delete")]
	public static extern void QPainter_Delete(QPainter_Ptr self);
	[LinkName("QPainter_Device")]
	public static extern void** QPainter_Device(void* self);
	[LinkName("QPainter_Begin")]
	public static extern bool QPainter_Begin(void* self, void** param1);
	[LinkName("QPainter_End")]
	public static extern bool QPainter_End(void* self);
	[LinkName("QPainter_IsActive")]
	public static extern bool QPainter_IsActive(void* self);
	[LinkName("QPainter_SetCompositionMode")]
	public static extern void QPainter_SetCompositionMode(void* self, QPainter_CompositionMode mode);
	[LinkName("QPainter_CompositionMode")]
	public static extern QPainter_CompositionMode QPainter_CompositionMode(void* self);
	[LinkName("QPainter_Font")]
	public static extern void** QPainter_Font(void* self);
	[LinkName("QPainter_SetFont")]
	public static extern void QPainter_SetFont(void* self, void** f);
	[LinkName("QPainter_FontMetrics")]
	public static extern void* QPainter_FontMetrics(void* self);
	[LinkName("QPainter_FontInfo")]
	public static extern void* QPainter_FontInfo(void* self);
	[LinkName("QPainter_SetPen")]
	public static extern void QPainter_SetPen(void* self, void** color);
	[LinkName("QPainter_SetPen2")]
	public static extern void QPainter_SetPen2(void* self, void** pen);
	[LinkName("QPainter_SetPen3")]
	public static extern void QPainter_SetPen3(void* self, Qt_PenStyle style);
	[LinkName("QPainter_Pen")]
	public static extern void** QPainter_Pen(void* self);
	[LinkName("QPainter_SetBrush")]
	public static extern void QPainter_SetBrush(void* self, void** brush);
	[LinkName("QPainter_SetBrush2")]
	public static extern void QPainter_SetBrush2(void* self, Qt_BrushStyle style);
	[LinkName("QPainter_Brush")]
	public static extern void** QPainter_Brush(void* self);
	[LinkName("QPainter_SetBackgroundMode")]
	public static extern void QPainter_SetBackgroundMode(void* self, Qt_BGMode mode);
	[LinkName("QPainter_BackgroundMode")]
	public static extern Qt_BGMode QPainter_BackgroundMode(void* self);
	[LinkName("QPainter_BrushOrigin")]
	public static extern void* QPainter_BrushOrigin(void* self);
	[LinkName("QPainter_SetBrushOrigin")]
	public static extern void QPainter_SetBrushOrigin(void* self, c_int x, c_int y);
	[LinkName("QPainter_SetBrushOrigin2")]
	public static extern void QPainter_SetBrushOrigin2(void* self, void** brushOrigin);
	[LinkName("QPainter_SetBrushOrigin3")]
	public static extern void QPainter_SetBrushOrigin3(void* self, void** brushOrigin);
	[LinkName("QPainter_SetBackground")]
	public static extern void QPainter_SetBackground(void* self, void** bg);
	[LinkName("QPainter_Background")]
	public static extern void** QPainter_Background(void* self);
	[LinkName("QPainter_Opacity")]
	public static extern double QPainter_Opacity(void* self);
	[LinkName("QPainter_SetOpacity")]
	public static extern void QPainter_SetOpacity(void* self, double opacity);
	[LinkName("QPainter_ClipRegion")]
	public static extern void* QPainter_ClipRegion(void* self);
	[LinkName("QPainter_ClipPath")]
	public static extern void* QPainter_ClipPath(void* self);
	[LinkName("QPainter_SetClipRect")]
	public static extern void QPainter_SetClipRect(void* self, void** param1);
	[LinkName("QPainter_SetClipRect2")]
	public static extern void QPainter_SetClipRect2(void* self, void** param1);
	[LinkName("QPainter_SetClipRect3")]
	public static extern void QPainter_SetClipRect3(void* self, c_int x, c_int y, c_int w, c_int h);
	[LinkName("QPainter_SetClipRegion")]
	public static extern void QPainter_SetClipRegion(void* self, void** param1);
	[LinkName("QPainter_SetClipPath")]
	public static extern void QPainter_SetClipPath(void* self, void** path);
	[LinkName("QPainter_SetClipping")]
	public static extern void QPainter_SetClipping(void* self, bool enable);
	[LinkName("QPainter_HasClipping")]
	public static extern bool QPainter_HasClipping(void* self);
	[LinkName("QPainter_ClipBoundingRect")]
	public static extern void* QPainter_ClipBoundingRect(void* self);
	[LinkName("QPainter_Save")]
	public static extern void QPainter_Save(void* self);
	[LinkName("QPainter_Restore")]
	public static extern void QPainter_Restore(void* self);
	[LinkName("QPainter_SetTransform")]
	public static extern void QPainter_SetTransform(void* self, void** transform);
	[LinkName("QPainter_Transform")]
	public static extern void** QPainter_Transform(void* self);
	[LinkName("QPainter_DeviceTransform")]
	public static extern void** QPainter_DeviceTransform(void* self);
	[LinkName("QPainter_ResetTransform")]
	public static extern void QPainter_ResetTransform(void* self);
	[LinkName("QPainter_SetWorldTransform")]
	public static extern void QPainter_SetWorldTransform(void* self, void** matrix);
	[LinkName("QPainter_WorldTransform")]
	public static extern void** QPainter_WorldTransform(void* self);
	[LinkName("QPainter_CombinedTransform")]
	public static extern void* QPainter_CombinedTransform(void* self);
	[LinkName("QPainter_SetWorldMatrixEnabled")]
	public static extern void QPainter_SetWorldMatrixEnabled(void* self, bool enabled);
	[LinkName("QPainter_WorldMatrixEnabled")]
	public static extern bool QPainter_WorldMatrixEnabled(void* self);
	[LinkName("QPainter_Scale")]
	public static extern void QPainter_Scale(void* self, double sx, double sy);
	[LinkName("QPainter_Shear")]
	public static extern void QPainter_Shear(void* self, double sh, double sv);
	[LinkName("QPainter_Rotate")]
	public static extern void QPainter_Rotate(void* self, double a);
	[LinkName("QPainter_Translate")]
	public static extern void QPainter_Translate(void* self, void** offset);
	[LinkName("QPainter_Translate2")]
	public static extern void QPainter_Translate2(void* self, void** offset);
	[LinkName("QPainter_Translate3")]
	public static extern void QPainter_Translate3(void* self, double dx, double dy);
	[LinkName("QPainter_Window")]
	public static extern void* QPainter_Window(void* self);
	[LinkName("QPainter_SetWindow")]
	public static extern void QPainter_SetWindow(void* self, void** window);
	[LinkName("QPainter_SetWindow2")]
	public static extern void QPainter_SetWindow2(void* self, c_int x, c_int y, c_int w, c_int h);
	[LinkName("QPainter_Viewport")]
	public static extern void* QPainter_Viewport(void* self);
	[LinkName("QPainter_SetViewport")]
	public static extern void QPainter_SetViewport(void* self, void** viewport);
	[LinkName("QPainter_SetViewport2")]
	public static extern void QPainter_SetViewport2(void* self, c_int x, c_int y, c_int w, c_int h);
	[LinkName("QPainter_SetViewTransformEnabled")]
	public static extern void QPainter_SetViewTransformEnabled(void* self, bool enable);
	[LinkName("QPainter_ViewTransformEnabled")]
	public static extern bool QPainter_ViewTransformEnabled(void* self);
	[LinkName("QPainter_StrokePath")]
	public static extern void QPainter_StrokePath(void* self, void** path, void** pen);
	[LinkName("QPainter_FillPath")]
	public static extern void QPainter_FillPath(void* self, void** path, void** brush);
	[LinkName("QPainter_DrawPath")]
	public static extern void QPainter_DrawPath(void* self, void** path);
	[LinkName("QPainter_DrawPoint")]
	public static extern void QPainter_DrawPoint(void* self, void** pt);
	[LinkName("QPainter_DrawPoint2")]
	public static extern void QPainter_DrawPoint2(void* self, void** p);
	[LinkName("QPainter_DrawPoint3")]
	public static extern void QPainter_DrawPoint3(void* self, c_int x, c_int y);
	[LinkName("QPainter_DrawPoints")]
	public static extern void QPainter_DrawPoints(void* self, void** points, c_int pointCount);
	[LinkName("QPainter_DrawPoints3")]
	public static extern void QPainter_DrawPoints3(void* self, void** points, c_int pointCount);
	[LinkName("QPainter_DrawLine")]
	public static extern void QPainter_DrawLine(void* self, void** line);
	[LinkName("QPainter_DrawLine2")]
	public static extern void QPainter_DrawLine2(void* self, void** line);
	[LinkName("QPainter_DrawLine3")]
	public static extern void QPainter_DrawLine3(void* self, c_int x1, c_int y1, c_int x2, c_int y2);
	[LinkName("QPainter_DrawLine4")]
	public static extern void QPainter_DrawLine4(void* self, void** p1, void** p2);
	[LinkName("QPainter_DrawLine5")]
	public static extern void QPainter_DrawLine5(void* self, void** p1, void** p2);
	[LinkName("QPainter_DrawLines")]
	public static extern void QPainter_DrawLines(void* self, void** lines, c_int lineCount);
	[LinkName("QPainter_DrawLines2")]
	public static extern void QPainter_DrawLines2(void* self, void** lines);
	[LinkName("QPainter_DrawLines3")]
	public static extern void QPainter_DrawLines3(void* self, void** pointPairs, c_int lineCount);
	[LinkName("QPainter_DrawLines4")]
	public static extern void QPainter_DrawLines4(void* self, void** pointPairs);
	[LinkName("QPainter_DrawLines5")]
	public static extern void QPainter_DrawLines5(void* self, void** lines, c_int lineCount);
	[LinkName("QPainter_DrawLines6")]
	public static extern void QPainter_DrawLines6(void* self, void** lines);
	[LinkName("QPainter_DrawLines7")]
	public static extern void QPainter_DrawLines7(void* self, void** pointPairs, c_int lineCount);
	[LinkName("QPainter_DrawLines8")]
	public static extern void QPainter_DrawLines8(void* self, void** pointPairs);
	[LinkName("QPainter_DrawRect")]
	public static extern void QPainter_DrawRect(void* self, void** rect);
	[LinkName("QPainter_DrawRect2")]
	public static extern void QPainter_DrawRect2(void* self, c_int x1, c_int y1, c_int w, c_int h);
	[LinkName("QPainter_DrawRect3")]
	public static extern void QPainter_DrawRect3(void* self, void** rect);
	[LinkName("QPainter_DrawRects")]
	public static extern void QPainter_DrawRects(void* self, void** rects, c_int rectCount);
	[LinkName("QPainter_DrawRects2")]
	public static extern void QPainter_DrawRects2(void* self, void** rectangles);
	[LinkName("QPainter_DrawRects3")]
	public static extern void QPainter_DrawRects3(void* self, void** rects, c_int rectCount);
	[LinkName("QPainter_DrawRects4")]
	public static extern void QPainter_DrawRects4(void* self, void** rectangles);
	[LinkName("QPainter_DrawEllipse")]
	public static extern void QPainter_DrawEllipse(void* self, void** r);
	[LinkName("QPainter_DrawEllipse2")]
	public static extern void QPainter_DrawEllipse2(void* self, void** r);
	[LinkName("QPainter_DrawEllipse3")]
	public static extern void QPainter_DrawEllipse3(void* self, c_int x, c_int y, c_int w, c_int h);
	[LinkName("QPainter_DrawEllipse4")]
	public static extern void QPainter_DrawEllipse4(void* self, void** center, double rx, double ry);
	[LinkName("QPainter_DrawEllipse5")]
	public static extern void QPainter_DrawEllipse5(void* self, void** center, c_int rx, c_int ry);
	[LinkName("QPainter_DrawPolyline")]
	public static extern void QPainter_DrawPolyline(void* self, void** points, c_int pointCount);
	[LinkName("QPainter_DrawPolyline3")]
	public static extern void QPainter_DrawPolyline3(void* self, void** points, c_int pointCount);
	[LinkName("QPainter_DrawPolygon")]
	public static extern void QPainter_DrawPolygon(void* self, void** points, c_int pointCount);
	[LinkName("QPainter_DrawPolygon3")]
	public static extern void QPainter_DrawPolygon3(void* self, void** points, c_int pointCount);
	[LinkName("QPainter_DrawConvexPolygon")]
	public static extern void QPainter_DrawConvexPolygon(void* self, void** points, c_int pointCount);
	[LinkName("QPainter_DrawConvexPolygon3")]
	public static extern void QPainter_DrawConvexPolygon3(void* self, void** points, c_int pointCount);
	[LinkName("QPainter_DrawArc")]
	public static extern void QPainter_DrawArc(void* self, void** rect, c_int a, c_int alen);
	[LinkName("QPainter_DrawArc2")]
	public static extern void QPainter_DrawArc2(void* self, void** param1, c_int a, c_int alen);
